# llmini

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REFERENCES.md  data.py  environment.yaml  model.py  pyproject.toml  requirements.txt  sample.py  setup.py  tinygpt_char.pt  train.py
.github/workflows/: ci.yml
llmini/: __init__.py  arch.py  config.py  data.py  layers.py  model.py  sample.py  sample_complex.py  train.py  utils.py
llmini/scripts/: __init__.py  generate_text.py  load_wikitext.py  preprocess.py  setup_external.py  train_model.py
llmini/scripts/scripts/: load_wikitext.py
scripts/: evaluate.py  inspect_checkpoint.py  load_wikitext.py  setup_external.py  split_pt.py
tests/: test_data.py  test_get_batch.py  test_layers.py  test_model.py  test_sample.py  test_train.py  test_utils.py
