[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmini"
version = "1.0.0"
description = "A Tiny LLM Implementation"
authors = [
    { name = "Nick Terrel", email = "nick@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch>=1.9.0",
    "numpy",
    "tqdm"
]
keywords = ["LLM", "GPT", "TinyGPT", "Deep Learning"]

[project.optional-dependencies]
development = [
    "pytest>=6.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]